# WaldoBot_Remaster

./: CMakeLists.txt  README.md
cmake/: test_dpp.cpp
include/manguera/: chatbot.hpp
include/policarpo/: manager.hpp  player.hpp  song_manager.hpp  track_index.hpp  utils.hpp  voice_session.hpp
include/waldo/: command_registry.hpp  context.hpp  services.hpp
include/waldo/modules/: music_module.hpp  ping_module.hpp
src/: main.cpp
src/manguera/: chatbot.cpp
src/modules/: music_module.cpp  ping_module.cpp
src/policarpo/: manager.cpp  player.cpp  song_manager.cpp  track_index.cpp  utils.cpp  voice_session.cpp
